# SiteSlayer

./: .dockerignore  .env.example  .gitignore  ACCOMPLISHMENTS.md  COMMIT_MESSAGE.txt  DEMO_SITE_GUIDE.md  Dockerfile  HOMEPAGE_IMPROVEMENTS.md  PERFORMANCE_REPORT.md  README.md  check_test_results.py  fly.toml  pyproject.toml  requirements.txt  sites_to_scrape.txt  test_multiple_sites.py
.github/workflows/: fly-deploy.yml  scrape-sites.yml
scripts/: deploy_server.sh  start_server.sh
sites/arkhealthfoundation_com/: content.md  email.txt  index.html  urls.txt
sites/bivensdentistry_com/: error.txt  index.html
sites/dentistryofnashville_com/: content.md  email.txt  error.txt  index.html  urls.txt
sites/enfdentistry_com/: content.md  email.txt  index.html  urls.txt
sites/example_com/: content.md  index.html
sites/ifdnashville_com/: content.md  email.txt  error.txt  index.html
sites/katherinehalldds_com/: content.md  email.txt  error.txt  index.html
sites/lifetimedentistrytn_com/: content.md  email.txt  index.html  urls.txt
sites/millcreekdental_net/: content.md  email.txt  index.html  urls.txt
sites/mtjulietdentalstudio_com/: content.md  index.html
sites/musiccitydental_com/: content.md  email.txt  urls.txt
sites/nashvillesmilesup_com/: content.md  email.txt  index.html  urls.txt
sites/nolensvillefamilydentistry_com/: content.md  email.txt  index.html  urls.txt
sites/theclaylady_com/: content.md  (+3 more)
web_scraper/: chatbot_example.js  config.py  create_local_site.py  demo_site_creator.py  email_writer.py  main.py
website_server/: agent.py  main.py
(+75 files in other folders)
