[project]
name = "siteslayer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "colorama>=0.4.6",
    "lxml>=6.0.2",
    "selenium>=4.38.0",
    "html2text>=2025.4.15",
    "markdownify>=1.2.2",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "aiohttp>=3.13.2",
    "markdown>=3.10",
]
